# mir_compositor

./: CMakeLists.txt  README.md  build.sh  buildRun.sh  main.cpp  mcompfullscreenclient.h  mcompwallpaper.cpp  mcompwallpaper.h  mcompwindowmanager.cpp  mcompwindowmanager.h  mircomp.cpp  printer.cpp  printer.h  run.sh
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  helloWorld
